<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/googleSyncInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/alegreya"
        android:gravity="center"
        android:text="@string/GoogleCalendarSyncInfo"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/temperatureUnitInfo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/temperatureUnitInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TemperatureUnitPreference"
        android:textSize="20sp"
        android:fontFamily="@font/alegreya"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/googleSyncInfo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/temperatureUnitPref"/>

    <RadioGroup
        android:id="@+id/temperatureUnitPref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/allDone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperatureUnitInfo">

        <RadioButton
            android:id="@+id/unitFahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya"
            android:textSize="18sp"
            android:text="@string/Fahrenheit" />

        <RadioButton
            android:id="@+id/unitCelcius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya"
            android:textSize="18sp"
            android:text="@string/Celcius" />
    </RadioGroup>

    <ImageButton
        android:id="@+id/allDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AppImageButtonStyle"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/ic_arrow_forward_white_24dp"
        android:background="@drawable/bordered_button"
        app:layout_constraintTop_toBottomOf="@id/temperatureUnitPref"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
</android.support.constraint.ConstraintLayout>