<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewCreateLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<android.support.constraint.ConstraintLayout
    android:id="@+id/createLoginConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcomeTextView"
        style="@style/HeadingTextLightBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/WelcomeMessage"
        android:fontFamily="@font/alegreya"
        android:gravity="center"
        android:text="@string/WelcomeMessage"
        app:layout_constraintBottom_toTopOf="@+id/fullName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/edittext_padding"
        android:layout_marginEnd="@dimen/edittext_margin_end"
        android:layout_marginStart="@dimen/edittext_margin_start"
        android:layout_marginLeft="@dimen/edittext_margin_start"
        android:layout_marginRight="@dimen/edittext_margin_end"
        android:layout_marginBottom="@dimen/edittext_margin_bottom"
        android:background="@drawable/bordered_edittext"
        android:elevation="3dp"
        android:hint="@string/FullNameHint"
        android:inputType="textCapWords"
        android:textColor="@color/editTextColor"
        android:textColorHint="@color/hintColor"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeTextView"
        app:layout_constraintBottom_toTopOf="@+id/email"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/edittext_margin_bottom"
        android:layout_marginLeft="8dp"
        android:background="@drawable/bordered_edittext"
        android:elevation="3dp"
        android:gravity="left|center_vertical"
        android:hint="@string/EmailHint"
        android:inputType="textEmailAddress"
        android:padding="@dimen/edittext_padding"
        android:textColor="@color/editTextColor"
        android:textColorHint="@color/hintColor"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fullName"
        app:layout_constraintRight_toLeftOf="@id/googleSync"/>

    <CheckBox
        android:id="@+id/googleSync"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/bordered_edittext"
        android:checked="true"
        android:gravity="left|center_vertical"
        android:padding="2dp"
        android:text="@string/SyncCalendarCheckBox"
        android:textColor="@color/editTextColor"
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/email"
        app:layout_constraintTop_toBottomOf="@id/fullName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bordered_edittext"
        android:elevation="3dp"
        android:hint="@string/PasswordHint"
        android:inputType="textPassword"
        android:padding="@dimen/edittext_padding"
        android:layout_marginEnd="@dimen/edittext_margin_end"
        android:layout_marginStart="@dimen/edittext_margin_start"
        android:layout_marginLeft="@dimen/edittext_margin_start"
        android:layout_marginRight="@dimen/edittext_margin_end"
        android:layout_marginBottom="@dimen/edittext_margin_bottom"
        android:textColor="@color/editTextColor"
        android:textColorHint="@color/hintColor"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintBottom_toTopOf="@+id/phone"/>

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bordered_edittext"
        android:elevation="3dp"
        android:hint="@string/PhoneHint"
        android:inputType="phone"
        android:padding="@dimen/edittext_padding"
        android:layout_marginEnd="@dimen/edittext_margin_end"
        android:layout_marginStart="@dimen/edittext_margin_start"
        android:layout_marginLeft="@dimen/edittext_margin_start"
        android:layout_marginRight="@dimen/edittext_margin_end"
        android:layout_marginBottom="@dimen/edittext_margin_bottom"
        android:textColor="@color/editTextColor"
        android:textColorHint="@color/hintColor"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintBottom_toTopOf="@+id/dob"/>

    <EditText
        android:id="@+id/dob"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:background="@drawable/bordered_edittext"
        android:elevation="3dp"
        android:hint="@string/DobHint"
        android:inputType="datetime"
        android:maxLength="10"
        android:padding="@dimen/edittext_padding"
        android:layout_marginEnd="@dimen/edittext_margin_end"
        android:layout_marginStart="@dimen/edittext_margin_start"
        android:layout_marginLeft="@dimen/edittext_margin_start"
        android:layout_marginRight="@dimen/edittext_margin_end"
        android:layout_marginBottom="@dimen/edittext_margin_bottom"
        android:textColor="@color/editTextColor"
        android:textColorHint="@color/hintColor"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone"
        app:layout_constraintBottom_toTopOf="@+id/emergencyContactName"/>

    <EditText
        android:id="@+id/emergencyContactName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bordered_edittext"
        android:elevation="3dp"
        android:hint="@string/EmergencyContactNameHint"
        android:padding="@dimen/edittext_padding"
        android:layout_marginEnd="@dimen/edittext_margin_end"
        android:layout_marginStart="@dimen/edittext_margin_start"
        android:layout_marginLeft="@dimen/edittext_margin_start"
        android:layout_marginRight="@dimen/edittext_margin_end"
        android:layout_marginBottom="@dimen/edittext_margin_bottom"
        android:inputType="textCapWords"
        android:textColor="@color/editTextColor"
        android:textColorHint="@color/hintColor"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dob"
        app:layout_constraintBottom_toTopOf="@+id/emergencyContactPhone"/>

    <EditText
        android:id="@+id/emergencyContactPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bordered_edittext"
        android:elevation="3dp"
        android:hint="@string/EmergencyContactPhoneHint"
        android:inputType="phone"
        android:padding="@dimen/edittext_padding"
        android:layout_marginEnd="@dimen/edittext_margin_end"
        android:layout_marginStart="@dimen/edittext_margin_start"
        android:layout_marginLeft="@dimen/edittext_margin_start"
        android:layout_marginRight="@dimen/edittext_margin_end"
        android:layout_marginBottom="@dimen/edittext_margin_bottom"
        android:textColor="@color/editTextColor"
        android:textColorHint="@color/hintColor"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emergencyContactName"
        app:layout_constraintBottom_toTopOf="@id/signUpButton"/>

    <ImageButton
        android:id="@+id/signUpButton"
        style="@style/AppImageButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:background="@drawable/bordered_button"
        android:elevation="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emergencyContactPhone"
        app:srcCompat="@drawable/ic_done_white_24dp" />

   <!-- <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:hint="@string/password_hint"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/pinkLight">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/bordered_edittext"
            android:inputType="textPassword"
            android:textColor="@color/editTextColor"
            android:textColorHint="@android:color/darker_gray"
            android:layout_gravity="center"/>
    </android.support.design.widget.TextInputLayout>-->

</android.support.constraint.ConstraintLayout>
</ScrollView>